samples/_failures_safe/1761002505_f6d8a2_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2f6a07bf.c: In function ‘get_next_token’:
./samples/SAFE/__tmp_2f6a07bf.c:174: error: expected ‘(’ at end of input
./samples/SAFE/__tmp_2f6a07bf.c:173:5: error: expected declaration or statement at end of input
  173 |     if
      |     ^~
